# godot-pck-tool

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: main.rs  scan.rs  upgrade.rs
src/pck/: crypto.rs  mod.rs
