[package]
name = "pck-tool"
version = "0.3.0"
edition = "2021"
description = "Godot .pck file inspector, extractor and decryption tool"
repository = "https://github.com/yearsyan/godot-pck-tool"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
aes = "0.8"
cipher = "0.4"
md5 = "0.7"
hex = "0.4"
flate2 = "1"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
